--- a/apache/vars/main.yml
+++ b/apache/vars/main.yml
@@ -10,3 +10,6 @@ apache_flavor: "prefork"
 
 # Default apache base directory (without trailing '/')
 apache_root: "/var/www"
+
+apache_port_http: 80
+apache_port_https: 443
