--- a/php/tasks/php-fpm.yml
+++ b/php/tasks/php-fpm.yml
@@ -33,5 +33,12 @@
   notify:
   - php-fpm-restart
 
-- include: $repository_basedir/php/tasks/php-fpm_addpool.yml fpm_pool=$item
+# Add FPM Pools
+- name: "PHP | FPM | Push fpm configuration for pool ${item.name}"
+  template:
+    src=$repository_basedir/php/templates/php-fpm-pool.conf.j2
+    dest=/etc/php5/fpm/pool.d/${item.name}.conf
+    owner=root group=root mode=0644
   with_items: $php_fpm_pools
+  notify:
+  - php-fpm-restart
