--- a/playbooks/simple_examples/nginx_fpm.yml
+++ b/playbooks/simple_examples/nginx_fpm.yml
@@ -6,6 +6,7 @@
 
   vars:
     repository_basedir: ../../ansible-repository
+    bootstrap_upgrade: True
     # IPs allowed to access the status pages
     nginx_status_ranges: ["127.0.0.1", "192.168.1.0/24"]
 
