force index file mode

--- a/nginx/tasks/server_add.yml
+++ b/nginx/tasks/server_add.yml
@@ -33,6 +33,7 @@
   template:
     src=$repository_basedir/nginx/templates/default_index.${type}.j2
     dest=$root/index.${type}
+    mode=644
   when_boolean: $create_root
   notify:
   - nginx-restart
