refacto and add tz config

--- a/roles/mercurial/defaults/main.yml
+++ b/roles/mercurial/defaults/main.yml
@@ -1,6 +1,6 @@
-# Available variables
-# mercurial_username: YOUR USERNAME
-#
+
+mercurial_username: YOUR_USERNAME
+
 # # Optionnally, authentification groups can also be defined
 # mercurial_authgroups:
 # - grp: default
