--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -7,6 +7,12 @@
   command: apt-get upgrade -y
   when_boolean: $common_upgrade
 
+- name: Common | Set timezone (1)
+  shell: echo $common_tz | sudo tee /etc/timezone
+
+- name: Common | Set timezone (2)
+  command: dpkg-reconfigure tzdata
+
 - name: Common | Install 'python-apt' module
   command: apt-get install python-apt -y
 
