--- a/mysql/tasks/main.yml
+++ b/mysql/tasks/main.yml
@@ -1,5 +1,7 @@
 ---
+# Global server config
 - include: server.yml
 
+# Devmode specific configurations
 - include: dev.yml
   when_boolean: $devmode
