--- a/mysql/tasks/server.yml
+++ b/mysql/tasks/server.yml
@@ -8,7 +8,7 @@
 # 2) Preseed install options
 - name: MySQL | Push preseed file for debconf
   template:
-    src=$repository_basedir/mysql/templates/mysql_seed.j2
+    src=mysql_seed.j2
     dest=/root/mysql.seed
   when_failed: $mysqld_exists
 
@@ -33,7 +33,7 @@
 # Push configuration files
 - name: MySQL | set my.cnf template
   template:
-    src=$repository_basedir/mysql/templates/my.cnf.j2
+    src=$my.cnf.j2
     dest=/etc/mysql/my.cnf
     owner=root mode=0644
   notify:
