--- a/mysql/tasks/dev.yml
+++ b/mysql/tasks/dev.yml
@@ -1,11 +1,14 @@
 ---
 # Description: Set a user's default mysql-client IDs as root. DO NOT DO THIS IS A PRODUCTION SERVER.
-- name: MySQL | Dev | Config for easy access as user $dev_user
+- name: MySQL | Dev | Config for easy access as user $devmode_user
   template:
     src=user_my.cnf.j2
-    dest=/home/$ansible_user_id/.my.cnf
-    owner=$ansible_user_id mode=0600
-  when: dev_user is defined
+    dest=/home/$devmode_user/.my.cnf
+    owner=$devmode_user mode=0600
+  when: devmode_user is defined
+
+- debug: msg="coucou $devmode_user"
+  when: devmode_user is defined
 
 - name: MySQL | Dev | Development tools for MySQL
   apt: pkg=percona-toolkit state=present
