--- a/mysql/tasks/server.yml
+++ b/mysql/tasks/server.yml
@@ -19,7 +19,6 @@
 # 3) Install
 - name: MySQL | Install server
   apt: pkg=mysql-server state=installed force=yes
-  when_failed: $mysqld_exists
   when: mysqld_exists|failed
 
 - name: MySQL | Ensure MySQL daemon is running
@@ -34,7 +33,7 @@
 # Push configuration files
 - name: MySQL | set my.cnf template
   template:
-    src=$my.cnf.j2
+    src=my.cnf.j2
     dest=/etc/mysql/my.cnf
     owner=root mode=0644
   notify:
